@@ -4,6 +4,7 @@ LOG:
                   the standard doc directory
                   "make dist" injects the HTML version of the manual in the
                   package
+                  utility "lixat" (LIXA test) has been added
 
 20110228 - 0.5.28 changed "trnmgr" with "sttsrv" and "trnmgrs" with "sttsrvs"
                   in the lixac_conf.xml file; the previous name was 
